// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginViewComponent /> renders error message if login failed 1`] = `
<Fragment>
  <Menu
    borderless={true}
    color="blue"
    fixed="top"
    size="tiny"
    stackable={true}
  >
    <Container>
      <MenuItem
        as="a"
        header={true}
      >
        <Logo />
        <div
          className="active"
        >
          MemoDash
        </div>
      </MenuItem>
    </Container>
  </Menu>
  <div
    className="login-form"
  >
    <Form
      as="form"
      onSubmit={[Function]}
      size="large"
    >
      <Segment>
        <Header
          as="h2"
          color="blue"
        >
          <Responsive
            getWidth={[Function]}
            maxWidth={767}
            minWidth={320}
          >
            Log-in
          </Responsive>
          <Responsive
            getWidth={[Function]}
            minWidth={768}
          >
            Log-in to your account
          </Responsive>
        </Header>
        <FormInput
          as={[Function]}
          control={[Function]}
          name="username"
          onChange={[Function]}
          placeholder="Username"
          required={true}
          value="alice"
        />
        <br />
        <Button
          as="button"
          color="blue"
          role="button"
          size="large"
        >
          Login
        </Button>
      </Segment>
    </Form>
    <Message
      hidden={false}
      negative={true}
    >
      LoginError
    </Message>
  </div>
</Fragment>
`;

exports[`<LoginViewComponent /> renders without crashing 1`] = `
<Fragment>
  <Menu
    borderless={true}
    color="blue"
    fixed="top"
    size="tiny"
    stackable={true}
  >
    <Container>
      <MenuItem
        as="a"
        header={true}
      >
        <Logo />
        <div
          className="active"
        >
          MemoDash
        </div>
      </MenuItem>
    </Container>
  </Menu>
  <div
    className="login-form"
  >
    <Form
      as="form"
      onSubmit={[Function]}
      size="large"
    >
      <Segment>
        <Header
          as="h2"
          color="blue"
        >
          <Responsive
            getWidth={[Function]}
            maxWidth={767}
            minWidth={320}
          >
            Log-in
          </Responsive>
          <Responsive
            getWidth={[Function]}
            minWidth={768}
          >
            Log-in to your account
          </Responsive>
        </Header>
        <FormInput
          as={[Function]}
          control={[Function]}
          name="username"
          onChange={[Function]}
          placeholder="Username"
          required={true}
          value="alice"
        />
        <br />
        <Button
          as="button"
          color="blue"
          role="button"
          size="large"
        >
          Login
        </Button>
      </Segment>
    </Form>
    <Message
      hidden={true}
      negative={true}
    />
  </div>
</Fragment>
`;
